fix: alignment of grid elements

--- a/Responsive design 2/style.css
+++ b/Responsive design 2/style.css
@@ -5,8 +5,8 @@
 }
 
 header {
-    padding: 20px;
-    font-size: 25px;
+    padding: 32px;
+    font-size: 32px;
     text-align: center;
 }
 
@@ -125,7 +125,7 @@ a.active {
     margin-top: 40px;
     margin-left: 112px;
     margin-right: 112px;
-    width: 100% - 224px;
+    width: calc(100% - 224px);
     display: flex;
     flex-direction: column;
 }
@@ -185,9 +185,8 @@ a.active {
     grid-row: 2;
     column-gap: 60px;
     grid-row-gap: 60px;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-between;
-    align-items: stretch;
+    grid-template-columns: 592px 592px;
+    align-content: space-evenly;
 }
 
 .projects-examples-grid > div {
@@ -227,19 +226,16 @@ a.active {
     margin-top: 50px;
     margin-bottom: 80px;
     margin-right: 112px;
-    grid-template-columns: 592px 500px;
+    grid-template-columns: 40% 40%;
     display: grid;
     grid-row: auto auto;
     grid-column-gap: 60px;
     grid-row-gap: 60px;
-    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
-    display: flex;
-    flex-wrap: wrap;
   }
 
   .expertise-details-grid-container > div {
-    width: 40%;
+    width: 100%;
     padding: 0px;
     margin-left: 0px;
     padding-left: 15px;
@@ -447,6 +443,7 @@ a.active {
     .projects-flex-container {
         margin-left: 40px;
         margin-right: 40px;
+        width: calc(100% - 80px);
     }
 
     .projects-more-flex-container {
@@ -493,7 +490,6 @@ a.active {
         grid-column-gap: 60px;
         grid-row-gap: 60px;
         grid-template-columns: 1fr 1fr;
-        
         margin: 0px;
         justify-content: space-between;
     }
@@ -768,6 +764,7 @@ a.active {
     .projects-flex-container {
         margin-left: 16px;
         margin-right: 16px;
+        width: calc(100% - 32px);
     }
 
     .projects-more-flex-container {
@@ -916,7 +913,7 @@ a.active {
     .testimonial-content {
         width: 100%;
         flex-grow: 1;
-        margin-right: 50px; 
+        margin-right: 0px; 
     }
     
     .testimonial-content > p {
@@ -925,7 +922,7 @@ a.active {
     }
     
     .testimonial-name {
-        width: 20%;
+        width: 100%;
         align-self: flex-end;
         margin-top: 13px;
     }
